--- a/census.Rmd
+++ b/census.Rmd
@@ -5,24 +5,21 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r cache = TRUE}
+census <- read_csv("../../data/census/censoc_dmf_v2/censoc_dmf_v2.csv", 
+                   col_types = cols(
+  HISTID = col_character(),
+  byear = col_double(),
+  bmonth = col_double(),
+  dyear = col_double(),
+  dmonth = col_double(),
+  death_age = col_double(),
+  link_abe_exact_conservative = col_double(),
+  weight = col_double(),
+  weight_conservative = col_double()
+))
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
